Name:               Luisterpaal-fm
Version:            0.1
Synopsis:           Mashup of 3VOOR12 Luisterpaal + Last.fm
Description:        Last.fm Scrobbler for the 3VOOR12 Luisterpaal
License:            BSD3
License-file:       LICENSE
Copyright:          (c) 2009 Tupil
Author:             Eelco Lempsink (eml [at] tupil.com)
Build-Type:         Simple
Build-Depends:      base 
                  , containers 
                  , mtl 
                  , happstack-server == 0.2.* 
                  , parsec == 2.*
                  , bytestring == 0.9.*
                  , HTTP >= 3001
                  , network >= 2.2
                  , json >= 0.3
                  , old-time == 1.*
                  , nano-md5 >= 0.1
                  , utf8-string >= 0.3
                  , xhtml >= 3000
Extra-Source-Files: README
                  , TODO  
Data-Files:         static/luisterpaal.js
                  , static/style.css
Executable:         Luisterpaal
Main-Is:            Luisterpaal.hs
Other-Modules:      LastFm, Pages
